# HelloCmakeVCPKGSDL2

./: .gitmodules
source/: CMakeLists.txt  CMakePresets.json  main.cpp
